# deebase

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: api_reference.md  best-practices.md  cli_reference.md  how-it-works.md  implementation_plan.md  implemented.md  migrating_from_fastlite.md  phase11_12_future.md  phase12_future.md  types_reference.md
examples/: README.md  complete_cli_example.py  complete_example.py  complete_migrations_example.py  phase10_foreign_keys_defaults.py  phase11_fk_navigation.py  phase12_indexes.py  phase13_cli.py  phase14_migrations.py  phase1_raw_sql.py  phase2_table_creation.py  phase3_crud_operations.py  phase4_dataclass_support.py  phase5_reflection.py  phase7_views.py  phase8_polish_utilities.py  phase9_transactions.py  views_joins_ctes.py
src/deebase/: __init__.py  column.py  database.py  dataclass_utils.py  exceptions.py  table.py  types.py  view.py
src/deebase/cli/: __init__.py  backup.py  codegen_cmd.py  db_cmd.py  generator.py  index_cmd.py  init_cmd.py  migrate_cmd.py  migration_runner.py  parser.py  state.py  table_cmd.py  utils.py  view_cmd.py
tests/: conftest.py  test_cli.py  test_column.py  test_crud.py  test_database.py  test_dataclass_support.py  test_dataclass_utils.py  test_fk_navigation.py  test_indexes.py  test_migrations.py  test_phase10_create.py  test_reflection.py  test_table_creation.py  test_transactions.py  test_types.py  test_views.py
