[project]
name = "deebase"
version = "0.1.0"
description = "Async SQLAlchemy-based implementation of the fastlite API"
readme = "README.md"
authors = [
    { name = "Rahul Dave(Credcore)", email = "rahul@credcore.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.0",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
